--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
     <div class="container">
         <div class="row row-fluid">
             <div class="col-md-12 col-xs-12">
-                <img src="static/media/WALLE_logo.jpeg" class="img-responsive">
+                <img src="static/logo/WALLE_logo.jpeg" class="img-responsive">
             </div>
         </div>
 
