--- a/templates/index.html
+++ b/templates/index.html
@@ -94,7 +94,7 @@
                 <h1>         </h1>
             </div>
             <div class="col-xs-4 text-center">
-                <button type="button" class="btn btn-primary" onclick="window.location='http://www.google.com'">
+                <button type="button" class="btn btn-primary" onClick="location.href='videos.html'">
                     <span class="glyphicon glyphicon-facetime-video"></span> Download Recent Streams
                 </button>
             </div>
